--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "core-js": "^3.25.3",
+    "node-sass": "^7.0.3",
     "nuxt": "^2.15.8",
+    "sass-loader": "^13.1.0",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10"
-  },
-  "devDependencies": {}
+  }
 }
