--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
   },
   "dependencies": {
     "core-js": "^3.25.3",
-    "node-sass": "^7.0.3",
     "nuxt": "^2.15.8",
-    "sass-loader": "^13.1.0",
+    "uuid": "^9.0.0",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10"
